<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="[X]"
            android:layout_gravity="right"
            android:background="@android:color/white"/>

        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/sign_up_email_text"
            android:background="@android:color/white"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/sign_up_website_text"
            android:visibility="gone"
            android:background="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:text="@string/sign_up_continuing_text"/>

        <TextView
            android:id="@+id/terms_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/sign_up_terms_text"/>

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="center"
            android:text="@string/sign_up_signup_button_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>