<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:layout_margin="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/set_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/password_new_password_text"
            android:background="@android:color/white"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/set_password_confirm_text"
            android:background="@android:color/white"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/btnPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="center"
            android:text="@string/set_password_button_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>